<resources>
    <string name="app_name">RecordCallApplication</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="call">Call</string>
    <string name="view_contacts">View Contacts</string>
    <string name="start_playing">Start Playing</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="back_to_main_screen">Back to main screen</string>
</resources>