<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:outlineAmbientShadowColor="#FB0000"
    android:outlineSpotShadowColor="#FF0000"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="30dp"
        android:background="#009688"
        android:text="@string/call"
        app:layout_constraintBottom_toTopOf="@+id/contactScreenButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/enter_phone_number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/contactScreenButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="220dp"
        android:background="#009688"
        android:text="@string/view_contacts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startPlaying"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="#FF5722"
        android:text="@string/start_playing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stopPlaying"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startRecording"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#8BC34A"
        android:text="@string/start_recording"
        app:layout_constraintBottom_toTopOf="@+id/startPlaying"
        app:layout_constraintEnd_toStartOf="@+id/stopRecording"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stopRecording"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#8BC34A"
        android:text="@string/stop_recording"
        app:layout_constraintBottom_toTopOf="@+id/stopPlaying"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startRecording" />

    <Button
        android:id="@+id/stopPlaying"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="#FF5722"
        android:text="@string/stop_playing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toEndOf="@+id/startPlaying" />

</androidx.constraintlayout.widget.ConstraintLayout>